agregamos otra info

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        Google  dice: se te ve el brazier, si sigue pasando eso, vamos a tener problemas
-    
+        cambios para probar el remoto con github
     </p>
 </body>
 </html>
